# rust-listenfd

./: Cargo.toml  README.md
.github/workflows/: tests.yml
src/: manager.rs  unix.rs
